--- a/css/index.css
+++ b/css/index.css
@@ -18,12 +18,6 @@ body {
     color: var(--primary-text-color);
 }
 
-.header-logo {
-    /* font-family: 'Roboto', sans-serif; */
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-}
-
 .header {
     width: 1600px;
     min-height: 80px;
@@ -40,6 +34,8 @@ body {
 
 .header-logo,
 .footer-logo {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
     color: #000000;
     font-weight: 700;
     font-size: 26px;
@@ -78,7 +74,9 @@ body {
 }
 
 .header-link:hover,
-.header-link:focus {
+.header-link:focus,
+.footer-item.contakt:hover, 
+.footer-item.contakt:focus {
     color: var(--accent-color);
 }
 
@@ -137,8 +135,15 @@ body {
     border-radius: 4px;
     border-style: none;
     color: var(--color-white)
-    
 }
+
+.hero-btn:hover, 
+.hero-btn:focus {
+    background: #188CE8;
+    cursor: pointer;
+}
+
+
 
 .section-title {
     color: var(--secondary-title-text);
@@ -169,7 +174,7 @@ body {
 }
 
 
-.significant-title p {
+.significant .sign-subtxt {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 14px;
@@ -195,13 +200,14 @@ body {
     letter-spacing: 0.03em;
 }
 
-.team-title p {
-    color: var(--primary-text-color);
+.team-subtxt {
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
+    color: var(--primary-text-color);
 }
 
 .footer {
@@ -224,30 +230,53 @@ body {
 
 /*=========================================== Вторая страничка Портфолио ========================================*/
 
-h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    /* identical to box height, or 200% */
-
-    letter-spacing: 0.06em;
-}
-
 .btn-group .btn {
     background-color: var(--portfolio-btn-color);
     color: var(--secondary-title-text);
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    border-radius: 4px;
+}
+
+.btn-group .btn:hover,
+.btn-group .btn:focus {
+    background: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .btn-group .btn:hover,
 .btn-group .btn:focus {
     background-color: var(--accent-color);
     color: var(--color-white);
+    cursor: pointer;
 }
 
-.cards-group h1 {
+.portfolio-txt {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
     color: var(--secondary-title-text);
 }
 
+.portfolio-subtxt {
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+}
 
+.portfolio-list {
+    width: 370px;
+    height: 404px;
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+}
