--- a/css/index.css
+++ b/css/index.css
@@ -12,10 +12,13 @@
     --color-white: #ffffff;
     --adress-color: rgba(255, 255, 255, 0.6);
     --portfolio-btn-color: #F5F4FA;
+    --font-family: 'Roboto', sans-serif;
+    --font-500: 500; 
 }
 
 body {
     color: var(--primary-text-color);
+    font-family: var(--font-family);
 }
 
 .header {
@@ -37,7 +40,6 @@ body {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     color: #000000;
-    font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
@@ -54,8 +56,8 @@ body {
 }
 
 .header-item {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
+    font-family: var(--font-family);
+    font-weight: var(--font-500);
 }
 
 /* .header-list {
@@ -64,8 +66,8 @@ body {
 
 .header-link,
 .adress-nav {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
+    font-family: var(--font-family);
+    font-weight: var(--font-500);
     color: var(--secondary-title-text);
     font-size: 14px;
     line-height: 1.14;
@@ -108,7 +110,7 @@ body {
     width: 696px;
     height: 120px;
     color: var(--color-white);
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -121,7 +123,7 @@ body {
 
 .hero-btn {
     display: block;
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     font-weight: 700;
     font-size: 16px;
     line-height: 1.875;
@@ -146,7 +148,7 @@ body {
 
 .section-title {
     color: var(--secondary-title-text);
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -158,7 +160,7 @@ body {
 
 .significant-title {
     color: var(--secondary-title-text);
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -173,7 +175,7 @@ body {
 }
 
 .significant .sign-subtxt {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -188,8 +190,8 @@ body {
 }
 
 .team-title {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
+    font-family: var(--font-family);
+    font-weight: var(--font-500);
     color: var(--secondary-title-text);
     font-size: 16px;
     line-height: 1.18;
@@ -198,7 +200,7 @@ body {
 }
 
 .team-subtxt {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     font-size: 16px;
     line-height: 1.18;
     text-align: center;
@@ -229,13 +231,15 @@ body {
 .btn-group .btn {
     background-color: var(--portfolio-btn-color);
     color: var(--secondary-title-text);
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
+    font-family: var(--font-family);
+    font-weight: var(--font-500);
     font-size: 16px;
     line-height: 1.62;
     text-align: center;
     letter-spacing: 0.03em;
     border-radius: 4px;
+    border: none;
+    padding: 6px 22px;
 }
 
 .btn-group .btn:hover,
@@ -252,7 +256,7 @@ body {
 }
 
 .portfolio-txt {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
@@ -262,7 +266,7 @@ body {
 }
 
 .portfolio-subtxt {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
@@ -278,8 +282,7 @@ body {
 
 .footer-list {
     font-style: normal;
-    font-family: 'Roboto', sans-serif;
-    font-weight:  400px;
+    font-family: var(--font-family);
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
