--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-/*  Акуент цвет  #2196F3*/
+/*  Акцент цвет  #2196F3*/
 /* Цвет белый #FFFFFF */
 /* Цвет второстепенного текста #212121; */
 /* основной цвет текста #757575; */
