--- a/css/index.css
+++ b/css/index.css
@@ -71,10 +71,10 @@ h2, h3, p, ul, a {
     width: 100%;
     top: 0;
     left: 0;
+    z-index: 2;
 
     background-color: var(--color-white);
     border-bottom: 1px solid #ECECEC;
-
 }
 
 .header-wrapper {
@@ -113,7 +113,10 @@ h2, h3, p, ul, a {
 .header-item:not(:last-child) {
     font-weight: 500;
     margin-right: 50px;
+}
 
+.header-item {
+    position: relative;
 }
 
 .header-list {
@@ -180,6 +183,19 @@ h2, h3, p, ul, a {
 
 .header-list .link.current {
     color: var(--accent-color);
+}
+
+.link.current::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+
+    border-radius: 2px;
+
+    background-color: var(--accent-color);
 }
 
 /* Hero */
@@ -265,6 +281,36 @@ h2, h3, p, ul, a {
 .made-list {
     display: flex;
     gap: 30px;
+}
+
+.made-item {
+    position: relative;
+}
+
+.thumb-made {
+    content: '';
+    position: absolute;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 70px;
+
+    background-color: rgba(47, 48, 58, 0.8);
+}
+
+.thumb-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: var(--color-white);
 }
 
 .significant {
