--- a/css/index.css
+++ b/css/index.css
@@ -288,7 +288,6 @@ h2, h3, p, ul, a {
 }
 
 .thumb-made {
-    content: '';
     position: absolute;
 
     display: flex;
@@ -638,4 +637,70 @@ border-radius: 4px;
 .join-link:hover, 
 .join-link:focus  {
     background-color: var(--accent-color);
+}
+
+/* Modal view */
+
+.backdrop {
+    position: fixed;
+    
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+
+    background-color:rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    min-width: 528px;
+    min-height: 581px;
+    
+    background-color: var(--color-white);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.thumb-modal {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 8px;
+    right: 8px;
+
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.modal-icon {
+    fill: #000000;
+    padding: auto;
+
+}
+
+.thumb-modal:hover,
+.thumb-modal:focus {
+    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.81);
+
+}
+
+.thumb-modal:active {
+    transform: scale(0.75);
+    transition: transform .1s ease;
 }
