--- a/css/index.css
+++ b/css/index.css
@@ -136,6 +136,8 @@ h2, h3, p, ul, a {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover,
@@ -179,6 +181,8 @@ h2, h3, p, ul, a {
 
 .adress-link {
     color: var(--primary-text-color);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list .link.current {
@@ -248,11 +252,14 @@ h2, h3, p, ul, a {
 
     color: var(--color-white);
     background: #2196F3;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .hero-btn:hover, 
 .hero-btn:focus {
-    background: #188CE8;
+    background-color: #188CE8;
     cursor: pointer;
 }
 
@@ -416,6 +423,7 @@ h2, h3, p, ul, a {
 
     color: var(--social-link-color);
 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover, 
@@ -443,6 +451,9 @@ h2, h3, p, ul, a {
   
     width: 170px;
     height: 92px;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .firms-item:hover .firms-link,
@@ -461,12 +472,11 @@ h2, h3, p, ul, a {
 
     width: 100%;
     height: 100%;
-    color: var(--social-link-color)
-}
+    color: var(--social-link-color);
 
-/* .firms-icon {
-    fill: currentColor;
-} */
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
 
 .footer {
     padding-bottom: 60px;
@@ -484,6 +494,9 @@ h2, h3, p, ul, a {
 
 .footer-link {
     color: var(--color-white);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .footer-link .contakt {
@@ -516,12 +529,9 @@ h2, h3, p, ul, a {
 
     background-color: var(--portfolio-btn-color);
     color: var(--secondary-title-text);
-}
 
-.btn-group .btn:hover,
-.btn-group .btn:focus {
-    background: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .btn-group .btn:hover,
@@ -530,7 +540,7 @@ h2, h3, p, ul, a {
     color: var(--color-white);
     cursor: pointer;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
+    border-radius: 4px;
 }
 
 .btn-group {
@@ -584,6 +594,9 @@ border-radius: 4px;
 
 .hover-link {
     display: block;
+
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .hover-link:hover,
@@ -632,6 +645,10 @@ border-radius: 4px;
     border-radius: 50%;
     color: var(--color-white);
 
+}
+
+.join-link {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .join-link:hover, 
