--- a/css/index.css
+++ b/css/index.css
@@ -596,12 +596,37 @@ h2, h3, p, ul, a {
     display: block;
 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
-.hover-link:hover,
+.hover-link:hover, 
 .hover-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.hover-link:hover .hover-thumb,
+.hover-link:focus .hover-thumb {
+    transform: translateY(-294px);
+}
+
+
+.img-thumb {
+    position: relative;
+    overflow: hidden;
+}
+
+.hover-thumb {
+    position: absolute;
+    left: 0;
+    padding: 63px 24px;
+
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+
+    color: var(--color-white);
+    background-color: rgba(33, 150, 243, 0.9);
+    
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-list {
