--- a/css/index.css
+++ b/css/index.css
@@ -605,7 +605,7 @@ h2, h3, p, ul, a {
 
 .hover-link:hover .hover-thumb,
 .hover-link:focus .hover-thumb {
-    transform: translateY(-294px);
+    transform: translateY(-100%);
 }
 
 
@@ -617,6 +617,7 @@ h2, h3, p, ul, a {
 .hover-thumb {
     position: absolute;
     left: 0;
+    max-height: 100%;
     padding: 63px 24px;
 
     font-size: 18px;
@@ -694,6 +695,10 @@ h2, h3, p, ul, a {
     z-index: 3;
 
     background-color:rgba(0, 0, 0, 0.2);
+
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .backdrop.is-hidden {
@@ -701,11 +706,14 @@ h2, h3, p, ul, a {
     pointer-events: none;
 }
 
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.9);
+}
+
 .modal {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
 
     min-width: 528px;
     min-height: 581px;
@@ -713,6 +721,9 @@ h2, h3, p, ul, a {
     background-color: var(--color-white);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+
+    transform: translate(-50%, -50%) scale(1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .thumb-modal {
@@ -733,13 +744,11 @@ h2, h3, p, ul, a {
 .modal-icon {
     fill: #000000;
     padding: auto;
-
 }
 
 .thumb-modal:hover,
 .thumb-modal:focus {
     box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.81);
-
 }
 
 .thumb-modal:active {
