--- a/css/index.css
+++ b/css/index.css
@@ -453,13 +453,14 @@ h2, h3, p, ul, a {
     height: 92px;
 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .firms-item:hover .firms-link,
 .firms-item:focus .firms-link,
 .firms-item:focus,
-.firms-item:hover {
+.firms-item:hover,
+.firms-link:focus, 
+.firms-link:hover {
     border-color: var(--accent-color);
     cursor: pointer;
     color: var(--accent-color);
@@ -475,7 +476,6 @@ h2, h3, p, ul, a {
     color: var(--social-link-color);
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .footer {
