--- a/css/index.css
+++ b/css/index.css
@@ -258,7 +258,9 @@ h2, h3, p, ul, a {
 }
 
 .hero-btn:hover, 
-.hero-btn:focus {
+.hero-btn:focus, 
+.form-btn:hover, 
+.form-btn:focus {
     background-color: #188CE8;
     cursor: pointer;
 }
@@ -701,10 +703,10 @@ h2, h3, p, ul, a {
 
 }
 
-.backdrop.is-hidden {
+/* .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
-}
+} */
 
 .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0.9);
@@ -717,6 +719,8 @@ h2, h3, p, ul, a {
 
     min-width: 528px;
     min-height: 581px;
+    padding: 40px 40px;
+
     
     background-color: var(--color-white);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -754,4 +758,94 @@ h2, h3, p, ul, a {
 .thumb-modal:active {
     transform: scale(0.75);
     transition: transform .1s ease;
+}
+
+.form-wrapper {
+    width: 448px;
+    margin: 0 auto;
+}
+
+.form-title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    margin-bottom: 12px;
+
+    color: #212121;
+}
+
+.form-label {
+    font-size: 12px;
+    line-height: 1.16;
+    /* identical to box height */
+
+    letter-spacing: 0.01em;
+
+    color: #757575;
+}
+
+.form-field {
+    display: flex;
+    flex-direction: column;
+
+    margin-bottom: 10px;
+}
+
+.form-field.checkbox {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 30px;
+    align-items: center;
+}
+
+.form-field.form-chekbox {
+    display: inline-block;
+    height: 0;
+}
+
+.form-btn {
+    font-weight: 700;
+    line-height: 1.88;
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    padding: 10px 52px;
+    margin: 0 auto;
+
+    color: var(--color-white);
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+}
+
+.form-field input {
+    /* height: 40px; */
+    /* width: 448px; */
+}
+
+.form-label.check {
+    font-size: 14px;
+    line-height: 1.5;
+
+    letter-spacing: 0.03em;
+
+    color: #757575;
+}
+
+.form-policy > a {
+    text-decoration: underline;
+    color: var(--accent-color);
+    text-decoration-skip-ink: none;
+}
+
+.textarea {
+    height: 120px;
+    /* margin-bottom: 20px; */
 }
