--- a/css/index.css
+++ b/css/index.css
@@ -260,7 +260,9 @@ h2, h3, p, ul, a {
 .hero-btn:hover, 
 .hero-btn:focus, 
 .form-btn:hover, 
-.form-btn:focus {
+.form-btn:focus,
+.mail-btn:hover, 
+.mail-btn:focus {
     background-color: #188CE8;
     cursor: pointer;
 }
@@ -656,7 +658,18 @@ h2, h3, p, ul, a {
     margin-left:  70px;
 }
 
-.join-title {
+.mail-wrapper {
+    display: flex;
+    margin-left: auto;
+}
+
+.mail-footer {
+    display: flex;
+    flex-direction: column;
+}
+
+.join-title,
+.mail-title {
     margin-bottom: 10px;
 
     font-weight: 700;
@@ -666,6 +679,50 @@ h2, h3, p, ul, a {
     text-transform: uppercase;
 
     color: var(--color-white)
+}
+
+.mail-btn {
+    align-self: end;
+    font-weight: 700;
+    line-height: 1.875;
+
+    display: flex;
+    align-items: center;
+    /* text-align: center; */
+    letter-spacing: 0.06em;
+
+    padding: 10px 28px;
+    margin-left: 12px;
+
+    color: var(--color-white);
+
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+}
+
+.mail-btn::after {
+    content: '';
+    /* display: inline-block; */
+
+    margin-left: 10px;
+    
+    width: 24px;
+    height: 24px;
+
+    background-image: url('../img/telegrammform.svg');
+}
+
+.mail-input {
+    width: 358px;
+    padding: 15px 16px;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+
+    background: #2F303A;
 }
 
 .item-footer > .join-link {
@@ -703,10 +760,10 @@ h2, h3, p, ul, a {
 
 }
 
-/* .backdrop.is-hidden {
+.backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
-} */
+}
 
 .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0.9);
@@ -743,21 +800,14 @@ h2, h3, p, ul, a {
     border-radius: 50%;
 
     border: 1px solid rgba(0, 0, 0, 0.1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
-.modal-icon {
-    fill: #000000;
-    padding: auto;
-}
-
-.thumb-modal:hover,
+.thumb-modal:hover, 
 .thumb-modal:focus {
-    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.81);
-}
-
-.thumb-modal:active {
-    transform: scale(0.75);
-    transition: transform .1s ease;
+    cursor: pointer;
+    color: var(--accent-color);
 }
 
 .form-wrapper {
@@ -780,16 +830,22 @@ h2, h3, p, ul, a {
 .form-label {
     font-size: 12px;
     line-height: 1.16;
-    /* identical to box height */
-
     letter-spacing: 0.01em;
 
+    margin-bottom: 4px;
+
     color: #757575;
+}
+
+.input-wrapper {
+    position: relative;
+
 }
 
 .form-field {
     display: flex;
     flex-direction: column;
+    position: relative;
 
     margin-bottom: 10px;
 }
@@ -801,10 +857,6 @@ h2, h3, p, ul, a {
     align-items: center;
 }
 
-.form-field.form-chekbox {
-    display: inline-block;
-    height: 0;
-}
 
 .form-btn {
     font-weight: 700;
@@ -825,15 +877,40 @@ h2, h3, p, ul, a {
     border: none;
 }
 
-.form-field input {
-    /* height: 40px; */
-    /* width: 448px; */
+.input {
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px; 
+    width: 100%;
+}
+
+.name-form, 
+.name-form + .name-svg {
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+.name-form:hover, 
+.name-form:focus, 
+.name-form:hover + .name-svg, 
+.name-form:focus + .name-svg {
+    border-color: var(--accent-color);
+    cursor: pointer;
+    fill: var(--accent-color);
+}
+
+.name-svg {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
 }
 
 .form-label.check {
     font-size: 14px;
     line-height: 1.5;
-
     letter-spacing: 0.03em;
 
     color: #757575;
@@ -847,5 +924,7 @@ h2, h3, p, ul, a {
 
 .textarea {
     height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
     /* margin-bottom: 20px; */
 }
