--- a/css/index.css
+++ b/css/index.css
@@ -927,8 +927,17 @@ h2, h3, p, ul, a {
 
 .textarea {
     height: 120px;
+    padding: 12px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+}
+
+.textarea::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
 }
 
 .form-field.form-textarea {
