--- a/css/index.css
+++ b/css/index.css
@@ -829,6 +829,7 @@ h2, h3, p, ul, a {
 .form-label {
     display: inline-block;
 
+    margin-bottom: 4px;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
@@ -876,6 +877,8 @@ h2, h3, p, ul, a {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input {
@@ -912,10 +915,16 @@ h2, h3, p, ul, a {
 }
 
 .form-label.check {
+    display: flex;
+    align-items: center;
+    gap: 2px;
+
     font-size: 14px;
     line-height: 1.5;
     letter-spacing: 0.03em;
 
+    margin-bottom: 30px;
+    padding-left: 12px;
     color: #757575;
 }
 
@@ -930,6 +939,8 @@ h2, h3, p, ul, a {
     padding: 12px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .textarea::placeholder {
@@ -953,14 +964,18 @@ h2, h3, p, ul, a {
     width: 16px;
     height: 15px;
 
+    margin-right: 6px;
+
     border: 2px solid #212121;
     border-radius: 2px;
+
 }
 
 .check-svg:focus,
-.check-svg:hover {
-    border: 2px solid #212121;
-    transform: scale(1.1);
+.check-svg:hover,
+.form-chekbox:focus + .check-svg {
+    border: 3px solid #212121;
+    cursor: pointer;
 }
 
 .form-chekbox + .check-svg {
@@ -972,4 +987,5 @@ h2, h3, p, ul, a {
     background-color: var(--accent-color);
     border-color: var(--accent-color);
 }
+
 
