--- a/css/index.css
+++ b/css/index.css
@@ -94,6 +94,12 @@ h2, h3, p, ul, a {
     color: var(--accent-color);
 }
 
+.header-logo:focus,
+.footer-logo:focus {
+    color: var(--accent-color);
+    outline: var(--accent-color);
+}
+
 .header-logo,
 .footer-logo {
     display: inline-block;
@@ -149,6 +155,8 @@ h2, h3, p, ul, a {
 .adress-link:hover, 
 .adress-link:focus {
     color: var(--accent-color);
+    outline: var(--accent-color);
+
 }
 
 /* Телефон имейл */
@@ -265,6 +273,7 @@ h2, h3, p, ul, a {
 .mail-btn:focus {
     background-color: #188CE8;
     cursor: pointer;
+    outline: var(--accent-color);
 }
 
 .section {
@@ -433,7 +442,8 @@ h2, h3, p, ul, a {
 .social-link:hover, 
 .social-link:focus {
     color: var(--color-white);
-    background-color: var(--accent-color)
+    background-color: var(--accent-color);
+    outline: var(--accent-color);
 }
 
 .icon {
@@ -468,6 +478,8 @@ h2, h3, p, ul, a {
     border-color: var(--accent-color);
     cursor: pointer;
     color: var(--accent-color);
+    outline: var(--accent-color);
+
 }
 
 .firms-link {
@@ -544,6 +556,8 @@ h2, h3, p, ul, a {
     cursor: pointer;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
+    outline: var(--accent-color);
+
 }
 
 .btn-group {
@@ -604,6 +618,7 @@ h2, h3, p, ul, a {
 .hover-link:hover, 
 .hover-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    outline: var(--accent-color);
 }
 
 .hover-link:hover .hover-thumb,
@@ -737,6 +752,7 @@ h2, h3, p, ul, a {
 .join-link:hover, 
 .join-link:focus  {
     background-color: var(--accent-color);
+    outline: var(--accent-color);
 }
 
 /* Modal view */
@@ -805,6 +821,7 @@ h2, h3, p, ul, a {
 .thumb-modal:focus {
     cursor: pointer;
     color: var(--accent-color);
+    outline: var(--accent-color);
 }
 
 .form-wrapper {
@@ -902,6 +919,7 @@ h2, h3, p, ul, a {
     border-color: var(--accent-color);
     cursor: pointer;
     fill: var(--accent-color);
+    outline: var(--accent-color);
 }
 
 .name-svg {
@@ -939,6 +957,7 @@ h2, h3, p, ul, a {
     border-radius: 4px;
 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    resize: none;
 }
 
 .textarea::placeholder {
