--- a/css/index.css
+++ b/css/index.css
@@ -193,7 +193,7 @@ h2, h3, p, ul, a {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header__list .link.current {
+.header__link--current {
     color: var(--accent-color);
 }
 
